--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="frame" style="background-color: #f0f0f0;">
         <!-- Left frame content goes here -->
-        <h1>Drawing canvas</h1>
+        <h1>Canvas</h1>
         <div id="leftCanvasContainer"></div>
     </div>
     <div class="frame" style="background-color: #e0e0e0;">
