--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.js"></script>
-    <script src="{{ url_for('static', filename='js/script.js') }}" defer></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://unpkg.com/d3-simple-slider"></script>
+    <script src="{{ url_for('static', filename='js/GraphTemp.js') }}"></script>
     <title>Data Story</title>
     <style>
         body {
@@ -31,11 +32,11 @@
     </div>
     <div class="frame" style="background-color: #e0e0e0;">
         <!-- Right frame content goes here -->
-        <h1>Data Frame</h1>
-        <canvas id="energyChart"></canvas>
-        <canvas id="slider" style="width:100%;height:30px;"></canvas>
+        <h1>Graphs</h1>
         <!-- Include your JavaScript file -->
-        <!-- <script src="{{ url_for('static', filename='js/script.js') }}" defer></script> -->
+        <svg id="chart" width="500" height="500"></svg>
     </div>
+
+
 </body>
 </html>
