--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,7 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://unpkg.com/d3-simple-slider"></script>
     <script src="{{ url_for('static', filename='js/GraphTemp.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/GraphCo2.js') }}"></script>
     <title>Data Story</title>
     <style>
         body {
@@ -35,6 +36,7 @@
         <h1>Graphs</h1>
         <!-- Include your JavaScript file -->
         <svg id="chart" width="500" height="500"></svg>
+        <svg id="chart-co2" width="500" height="500"></svg>
     </div>
 
 
