--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,8 +6,9 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://unpkg.com/d3-simple-slider"></script>
-    <script src="{{ url_for('static', filename='js/GraphTemp.js') }}"></script>
     <script src="{{ url_for('static', filename='js/GraphCo2.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/GraphTemp.js') }}"></script>
+    
     <title>Data Story</title>
     <style>
         body {
@@ -35,8 +36,9 @@
         <!-- Right frame content goes here -->
         <h1>Graphs</h1>
         <!-- Include your JavaScript file -->
-        <svg id="chart" width="500" height="500"></svg>
         <svg id="chart-co2" width="500" height="500"></svg>
+        <svg id="chart-temp" width="100%" height="500"></svg>
+        
     </div>
 
 
