--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,9 +36,8 @@
         <!-- Right frame content goes here -->
         <h1>Graphs</h1>
         <!-- Include your JavaScript file -->
-        <svg id="chart-co2" width="500" height="500"></svg>
-        <svg id="chart-temp" width="100%" height="500"></svg>
-        
+        <svg id="chart-co2" width="100%" height="500"></svg>
+        <svg id="chart-temp" width="100%" height="500"></svg>       
     </div>
 
 
