--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,8 +6,10 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://unpkg.com/d3-simple-slider"></script>
-    <script src="{{ url_for('static', filename='js/GraphCo2.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/GraphTemp.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/GraphFunctions.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/Graphs.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='js/GraphCo2.js') }}"></script> -->
+    <!-- <script src="{{ url_for('static', filename='js/GraphTemp.js') }}"></script> -->
     
     <title>Data Story</title>
     <style>
