added a data pipeline to a test P5 canvas and got it to draw based on the data.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,7 @@
     <script src="https://unpkg.com/d3-simple-slider"></script>
     <script src="{{ url_for('static', filename='js/GraphFunctions.js') }}"></script>
     <script src="{{ url_for('static', filename='js/Graphs.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/testSketch.js') }}"></script>
     <title>Data Story</title>
     <style>
         body {
