--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,7 +37,8 @@
         <h1>Graphs</h1>
         <!-- Include your JavaScript file -->
         <svg id="chart-co2" width="100%" height="500"></svg>
-        <svg id="chart-temp" width="100%" height="500"></svg>       
+        <svg id="chart-temp" width="100%" height="500"></svg>
+        <svg id="chart-energy" width="100%" height="500"></svg>     
     </div>
 
 
