--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,7 @@
     <script  src="{{ url_for('static', filename='js/visual/landmark.js')}}"></script> 
     <script  src="{{ url_for('static', filename='js/visual/snowmountain.js')}}"></script> 
     <script  src="{{ url_for('static', filename='js/visual/snowflake.js')}}"></script> 
+    <script  src="{{ url_for('static', filename='js/visual/tree.js')}}"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
