--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,6 +36,7 @@
         <!-- Right frame content goes here -->
         <h1>Graphs</h1>
         <!-- Include your JavaScript file -->
+        <svg id="global-slider" width="100%" height="100"></svg> <!-- The slider to rule them all -->
         <svg id="chart-co2" width="100%" height="500"></svg>
         <svg id="chart-temp" width="100%" height="500"></svg>
         <svg id="chart-energy" width="100%" height="500"></svg>     
