--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,6 +24,30 @@
             width: 100% !important;
             height: auto !important;
         }
+        #startButton, #stopButton {
+        margin: 10px;
+        padding: 5px;
+        }
+        .slider-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        }
+        .slider-container button {
+            margin: 5px;
+        }
+        .button-container button {
+        margin: 5px;
+        padding: 10px 20px; /* increase button size */
+        font-size: 16px; /* increase text size */
+        border: none; 
+        border-radius: 5px; /* rounded corners */
+        background-color: #021529; 
+        color: white; /* Text color */
+        cursor: pointer; /* changes the mouse pointer to a hand when it is over the button */
+        outline: none; 
+        }
     </style>
 </head>
 <body>
@@ -35,13 +59,18 @@
     <div class="frame" style="background-color: #e0e0e0;">
         <!-- Right frame content goes here -->
         <h1>Graphs</h1>
-        <!-- Include your JavaScript file -->
-        <svg id="global-slider" width="100%" height="100"></svg> <!-- The slider to rule them all -->
+        <!-- Slider and buttons -->
+        <div class="slider-container">
+            <div class="button-container">
+                <button id="startButton">Play</button>
+                <button id="stopButton">Pause</button>
+            </div>
+            <svg id="global-slider" width="100%" height="100"></svg>
+        </div>
+        <!-- Charts -->
         <svg id="chart-co2" width="100%" height="500"></svg>
         <svg id="chart-temp" width="100%" height="500"></svg>
         <svg id="chart-energy" width="100%" height="500"></svg>     
     </div>
-
-
 </body>
 </html>
