combime with visualization

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,11 @@
     <script src="{{ url_for('static', filename='js/GraphFunctions.js') }}"></script>
     <script src="{{ url_for('static', filename='js/Graphs.js') }}"></script>
     <script src="{{ url_for('static', filename='js/testSketch.js') }}"></script>
+    <script  src="{{ url_for('static', filename='js/visual/fish.js')}}"></script> 
+    <script  src="{{ url_for('static', filename='js/visual/wave.js')}}"></script> 
+    <script  src="{{ url_for('static', filename='js/visual/whale.js')}}"></script> 
+    <script  src="{{ url_for('static', filename='js/visual/landmark.js')}}"></script> 
+    <script  src="{{ url_for('static', filename='js/visual/tree.js')}}"></script> 
     <title>Data Story</title>
     <style>
         body {
